src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Group__c</fullName>
        <label>Expense Group</label>
        <referenceTo>Expense_Group__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Type</label>
        <referenceTo>Expense_Type__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Total__c</fullName>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tip__c</fullName>
        <label>Tip</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense</label>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>